# easyai-core

./: LICENSE  README.md  alembic.ini  application.yaml  pyproject.toml  uv.toml
core/: __init__.py  config.py  db.py  log.py  paginate.py  utils.py
core/exc/: __init__.py  ec.py  error.py  handler.py
easyai/: http.py
easyai/articles/: controller.py  service.py
easyai/articles/model/: dto.py  entity.py
easyai/htmx/: view.py
htmx_fullstack_starter/: __init__.py  config.py  db.py
htmx_fullstack_starter/admin/: __init__.py
htmx_fullstack_starter/admin/routes/: __init__.py  view.py
htmx_fullstack_starter/auth/: __init__.py  jwt.py  service.py
htmx_fullstack_starter/auth/model/: ec.py
htmx_fullstack_starter/auth/routes/: api.py
htmx_fullstack_starter/exc/: ec.py  error.py  handler.py
migrations/: env.py
starters/: __init__.py  db.py  log.py
starters/auth/: __init__.py  controller.py  jwt.py  service.py
starters/auth/model/: dto.py  ec.py  entity.py
starters/auth/routes/: __init__.py  api.py  view.py
starters/exc/: __init__.py  error.py  handler.py
starters/plugins/: __init__.py  fullstack.py
templates/: 404.html.jinja  admin.html.jinja  base.html.jinja  error.html.jinja  hello.html.jinja  login.html.jinja
