[project]
name = "easyai-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=0.31.0",
    "aiofiles>=24.1.0",
    "litestar[jwt,sqlalchemy,standard]>=2.14.0",
    "msgspec>=0.19.0",
    "picologging>=0.9.3",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[asyncmy]>=2.0.38",
    "structlog>=25.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
